variants/geany-bobgui/subprojects/bobgui/testsuite/css/parser/cross-fade-crash-4101.errors
cross-fade-crash-4101.css:2:74-75: error: BOBGUI_CSS_PARSER_ERROR_SYNTAX
